<resources>
    <string name="app_name">SezzleCalculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="divide">\u00F7</string>
    <string name="group">( )</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="decimal">.</string>

    <string name="generic_concatenated_string">%1$s%2$s</string>
    <string name="generic_concatenated_string_2">%1$sx%2$s</string>
    <string name="open_parenthesis_string">%1$s(</string>
    <string name="openx_parenthesis_string">%1$sx(</string>
    <string name="close_parenthesis_string">%1$s)</string>
    <string name="decimal_string">%1$s.</string>
    <string name="zero_decimal_string">%1$s0.</string>
</resources>